change img to video

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <link href=" css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <!-- video.js -->
+    <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet" />
+    <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
   </head>
 
   <body>
@@ -170,7 +174,16 @@
           </div>
           <div class="col-lg-8 px-0">
             <div class="img-box">
-              <img src="images/slider-img.png" alt="" />
+              <!-- ------------------------------------- -->
+              <!-- 상단 메인 gif / img 넣는 부분 -->
+              <!-- <img src="gif/angry-2498.gif" alt="상단 메인 이미지" /> -->
+              <!-- 1189.98 -->
+              <img
+                src="./assets/images/slider-img.png"
+                alt="상단 메인 이미지"
+              />
+              <!-- 915.33 -->
+              <!-- ------------------------------------- -->
             </div>
           </div>
         </div>
@@ -179,7 +192,6 @@
     <!-- end slider section -->
 
     <!-- about section -->
-
     <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
@@ -201,14 +213,46 @@
           </div>
         </div>
       </div>
-      <div class="img-box">
-        <div class="play_btn">
+      <!-- <div class="img-box"> -->
+      <!-- <div class="play_btn">
           <a href="#">
-            <img src="images/play.png" alt="" />
+            <img src="./assets/images/play.png" alt="" />
           </a>
-        </div>
-        <img src="images/about-img.png" class="about-img" alt="" />
-      </div>
+        </div> -->
+
+      <!-- ------------------------------------- -->
+      <!-- 광고매칭 동영상 넣는 부분 -->
+      <!-- <img src="./assets/images/about-img.png" class="about-img" alt="" /> -->
+      <!-- <video class="about-img"> -->
+      <!-- <source src="./assets/video/sample.mp4" type="video/mp4" /> -->
+      <!-- <source src="sample.ogg" type="video/ogg" /> -->
+      <!-- <source src="sample.webm" type="video/webm" /> -->
+      <!-- 이 브라우저에서 지원하지 않는 영상입니다 -->
+      <!-- 영상이 안나올 경우 표시될 멘트 -->
+      <!-- </video> -->
+
+      <video
+        id="my-player"
+        class="video-js about-img vjs-big-play-button"
+        controls
+        preload="auto"
+        data-setup="{}"
+      >
+        <source src="./assets/video/sample.mp4" type="video/mp4" />
+        <!-- <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
+  <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
+  <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source> -->
+        <p class="vjs-no-js">
+          To view this video please enable JavaScript, and consider upgrading to
+          a web browser that
+          <a href="https://videojs.com/html5-video-support/" target="_blank">
+            supports HTML5 video
+          </a>
+        </p>
+      </video>
+
+      <!-- ------------------------------------- -->
+      <!-- </div> -->
     </section>
 
     <!-- end about section -->
@@ -231,39 +275,39 @@
       </div>
       <div class="gallery_container">
         <div class="gallery_bg">
-          <img src="images/gallery-bg.png" alt="" />
+          <img src="./assets/images/gallery-bg.png" alt="" />
         </div>
         <div class="container">
           <div class="gallery_box">
             <div class="box b1">
               <div class="img-box">
-                <img src="images/gallery-1.jpg" alt="" />
+                <img src="./assets/images/gallery-1.jpg" alt="" />
                 <h5>INHANMUN-Z</h5>
               </div>
             </div>
             <div class="box b2">
               <div class="img-box">
-                <img src="images/gallery-2.jpg" alt="" />
+                <img src="./assets/images/gallery-2.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
               <div class="img-box">
-                <img src="images/gallery-3.jpg" alt="" />
+                <img src="./assets/images/gallery-3.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b3">
               <div class="img-box">
-                <img src="images/gallery-4.jpg" alt="" />
+                <img src="./assets/images/gallery-4.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
               <div class="img-box">
-                <img src="images/gallery-5.jpg" alt="" />
+                <img src="./assets/images/gallery-5.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b4">
               <div class="img-box">
-                <img src="images/gallery-6.jpg" alt="" />
+                <img src="./assets/images/gallery-6.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
             </div>
@@ -294,7 +338,7 @@
       </div>
       <div class="blog_container">
         <div class="blog_bg">
-          <img src="images/gallery-bg.png" alt="" />
+          <img src="./assets/images/gallery-bg.png" alt="" />
         </div>
         <div class="container">
           <div class="blog_box">
@@ -302,7 +346,7 @@
               <div class="col-md-6">
                 <div class="box b1">
                   <div class="img-box">
-                    <img src="images/blog1.jpg" alt="" />
+                    <img src="./assets/images/blog1.jpg" alt="" />
                   </div>
                   <div class="blog-detail">
                     <div class="blog_title">
@@ -319,7 +363,7 @@
               <div class="col-md-6">
                 <div class="box b2">
                   <div class="img-box">
-                    <img src="images/blog2.jpg" alt="" />
+                    <img src="./assets/images/blog2.jpg" alt="" />
                   </div>
                   <div class="blog-detail">
                     <div class="blog_title">
@@ -362,7 +406,7 @@
       </div>
       <div class="client_container">
         <div class="client_bg">
-          <img src="images/gallery-bg.png" alt="" />
+          <img src="./assets/images/gallery-bg.png" alt="" />
         </div>
         <div class="container">
           <div class="client_box">
@@ -378,36 +422,36 @@
                       <div class="carousel-item active">
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
                             <p>작품설명을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
                             <p>작품설명을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
                             <p>작품설명을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
@@ -434,7 +478,7 @@
               <div class="col-lg-6">
                 <div class="box b2">
                   <div class="camera_img-box">
-                    <img src="images/camera.png" alt="" />
+                    <img src="./assets/images/camera.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -460,7 +504,7 @@
                 <div class="info_contact">
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/location.png" alt="" />
+                      <img src="./assets/images/location.png" alt="" />
                     </div>
                     <div class="detail-box">
                       <h6>Location</h6>
@@ -468,7 +512,7 @@
                   </a>
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/mail.png" alt="" />
+                      <img src="./assets/images/mail.png" alt="" />
                     </div>
                     <div class="detail-box">
                       <h6>leejjas@naver.com</h6>
@@ -476,7 +520,7 @@
                   </a>
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/call.png" alt="" />
+                      <img src="./assets/images/call.png" alt="" />
                     </div>
                     <div class="detail-box">
                       <h6>Call +82 10-7706-3214</h6>
@@ -510,19 +554,19 @@
               <div class="col-md-6">
                 <div class="social_box">
                   <a href="#">
-                    <img src="images/facebook.png" alt="" />
+                    <img src="./assets/images/facebook.png" alt="" />
                   </a>
                   <a href="#">
-                    <img src="images/twitter.png" alt="" />
+                    <img src="./assets/images/twitter.png" alt="" />
                   </a>
                   <a href="#">
-                    <img src="images/linkedin.png" alt="" />
+                    <img src="./assets/images/linkedin.png" alt="" />
                   </a>
                   <a href="#">
-                    <img src="images/instagram.png" alt="" />
+                    <img src="./assets/images/instagram.png" alt="" />
                   </a>
                   <a href="#">
-                    <img src="images/youtube.png" alt="" />
+                    <img src="./assets/images/youtube.png" alt="" />
                   </a>
                 </div>
               </div>
@@ -564,7 +608,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="js/bootstrap.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
   </body>
