--- a/index.html
+++ b/index.html
@@ -213,46 +213,46 @@
           </div>
         </div>
       </div>
-      <!-- <div class="img-box"> -->
-      <!-- <div class="play_btn">
+      <div class="img-box">
+        <!-- <div class="play_btn">
           <a href="#">
             <img src="./assets/images/play.png" alt="" />
           </a>
         </div> -->
 
-      <!-- ------------------------------------- -->
-      <!-- 광고매칭 동영상 넣는 부분 -->
-      <!-- <img src="./assets/images/about-img.png" class="about-img" alt="" /> -->
-      <!-- <video class="about-img"> -->
-      <!-- <source src="./assets/video/sample.mp4" type="video/mp4" /> -->
-      <!-- <source src="sample.ogg" type="video/ogg" /> -->
-      <!-- <source src="sample.webm" type="video/webm" /> -->
-      <!-- 이 브라우저에서 지원하지 않는 영상입니다 -->
-      <!-- 영상이 안나올 경우 표시될 멘트 -->
-      <!-- </video> -->
+        <!-- ------------------------------------- -->
+        <!-- 광고매칭 동영상 넣는 부분 -->
+        <!-- <img src="./assets/images/about-img.png" class="about-img" alt="" /> -->
+        <!-- <video class="about-img"> -->
+        <!-- <source src="./assets/video/sample.mp4" type="video/mp4" /> -->
+        <!-- <source src="sample.ogg" type="video/ogg" /> -->
+        <!-- <source src="sample.webm" type="video/webm" /> -->
+        <!-- 이 브라우저에서 지원하지 않는 영상입니다 -->
+        <!-- 영상이 안나올 경우 표시될 멘트 -->
+        <!-- </video> -->
+        <video
+          id="my-player"
+          class="video-js about-img vjs-big-play-button"
+          controls
+          preload="auto"
+          data-setup="{}"
+        >
+          <source src="./assets/video/sample.mp4" type="video/mp4" />
+          <!-- <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
+      <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
+      <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source> -->
+          <p class="vjs-no-js">
+            <!-- 동영상 확장자 맞지 않을때 나오는 문구 -->
+            To view this video please enable JavaScript, and consider upgrading
+            to a web browser that
+            <a href="https://videojs.com/html5-video-support/" target="_blank">
+              supports HTML5 video
+            </a>
+          </p>
+        </video>
 
-      <video
-        id="my-player"
-        class="video-js about-img vjs-big-play-button"
-        controls
-        preload="auto"
-        data-setup="{}"
-      >
-        <source src="./assets/video/sample.mp4" type="video/mp4" />
-        <!-- <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
-  <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
-  <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source> -->
-        <p class="vjs-no-js">
-          To view this video please enable JavaScript, and consider upgrading to
-          a web browser that
-          <a href="https://videojs.com/html5-video-support/" target="_blank">
-            supports HTML5 video
-          </a>
-        </p>
-      </video>
-
-      <!-- ------------------------------------- -->
-      <!-- </div> -->
+        <!-- ------------------------------------- -->
+      </div>
     </section>
 
     <!-- end about section -->
@@ -280,36 +280,159 @@
         <div class="container">
           <div class="gallery_box">
             <div class="box b1">
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-1.jpg" alt="" />
                 <h5>INHANMUN-Z</h5>
               </div>
             </div>
             <div class="box b2">
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-2.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-3.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b3">
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-4.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-5.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b4">
-              <div class="img-box">
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
                 <img src="./assets/images/gallery-6.jpg" alt="" />
                 <h5>INHAMUN-Z</h5>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="galleryModal"
+        tabindex="-1"
+        aria-labelledby="galleryModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Our Gallery</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div
+                id="galleryCarouselControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./assets/images/gallery-1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-target="#galleryCarouselControls"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-target="#galleryCarouselControls"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
             </div>
           </div>
         </div>
@@ -344,7 +467,12 @@
           <div class="blog_box">
             <div class="row">
               <div class="col-md-6">
-                <div class="box b1">
+                <div
+                  class="box b1"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#blogModal"
+                >
                   <div class="img-box">
                     <img src="./assets/images/blog1.jpg" alt="" />
                   </div>
@@ -361,7 +489,12 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="box b2">
+                <div
+                  class="box b2"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#blogModal"
+                >
                   <div class="img-box">
                     <img src="./assets/images/blog2.jpg" alt="" />
                   </div>
@@ -377,6 +510,99 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="blogModal"
+        tabindex="-1"
+        aria-labelledby="blogyModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">최근 작품</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div
+                id="blogCarouselControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./assets/images/blog1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/blog2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-target="#blogCarouselControls"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-target="#blogCarouselControls"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
             </div>
           </div>
         </div>
@@ -419,7 +645,12 @@
                     data-ride="carousel"
                   >
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div
+                        class="carousel-item active"
+                        class="btn btn-primary"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
                             <img src="./assets/images/client.png" alt="" />
@@ -431,7 +662,12 @@
                           </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div
+                        class="carousel-item"
+                        class="btn btn-primary"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
                             <img src="./assets/images/client.png" alt="" />
@@ -443,7 +679,12 @@
                           </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div
+                        class="carousel-item"
+                        class="btn btn-primary"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
                             <img src="./assets/images/client.png" alt="" />
@@ -482,6 +723,101 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="clientModal"
+        tabindex="-1"
+        aria-labelledby="clientModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="clientModalLabel">
+                유저와 기업의 이익
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div
+                id="clientCarouselControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./assets/images/blog1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/blog2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-target="#clientCarouselControls"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-target="#clientCarouselControls"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
             </div>
           </div>
         </div>
