--- a/about.html
+++ b/about.html
@@ -32,9 +32,14 @@
     />
 
     <!-- Custom styles for this template -->
+    <link href=" css/about.css" rel="stylesheet" />
     <link href=" css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <!-- video.js -->
+    <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet" />
+    <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
   </head>
 
   <body class="sub_page">
@@ -82,8 +87,7 @@
 
     <div class="layout_padding">
       <!-- about section -->
-
-      <section class="about_section layout_padding-bottom">
+      <section class="about_section layout_padding">
         <div class="container">
           <div class="row">
             <div class="col-md-5">
@@ -105,12 +109,47 @@
           </div>
         </div>
         <div class="img-box">
-          <div class="play_btn">
-            <a href="#">
-              <img src="images/play.png" alt="" />
-            </a>
-          </div>
-          <img src="images/about-img.png" class="about-img" alt="" />
+          <!-- <div class="play_btn">
+          <a href="#">
+            <img src="./assets/images/play.png" alt="" />
+          </a>
+        </div> -->
+
+          <!-- ------------------------------------- -->
+          <!-- 광고매칭 동영상 넣는 부분 -->
+          <!-- <img src="./assets/images/about-img.png" class="about-img" alt="" /> -->
+          <!-- <video class="about-img"> -->
+          <!-- <source src="./assets/video/sample.mp4" type="video/mp4" /> -->
+          <!-- <source src="sample.ogg" type="video/ogg" /> -->
+          <!-- <source src="sample.webm" type="video/webm" /> -->
+          <!-- 이 브라우저에서 지원하지 않는 영상입니다 -->
+          <!-- 영상이 안나올 경우 표시될 멘트 -->
+          <!-- </video> -->
+          <video
+            id="my-player"
+            class="video-js about-img vjs-big-play-button"
+            controls
+            preload="auto"
+            data-setup="{}"
+          >
+            <source src="./assets/video/sample.mp4" type="video/mp4" />
+            <!-- <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
+      <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
+      <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source> -->
+            <p class="vjs-no-js">
+              <!-- 동영상 확장자 맞지 않을때 나오는 문구 -->
+              To view this video please enable JavaScript, and consider
+              upgrading to a web browser that
+              <a
+                href="https://videojs.com/html5-video-support/"
+                target="_blank"
+              >
+                supports HTML5 video
+              </a>
+            </p>
+          </video>
+
+          <!-- ------------------------------------- -->
         </div>
       </section>
 
