--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,18 @@
                     새로운 창작물을 관람하고 자신만의 작품을 신청하여 본인만의
                     캐릭터를 제작활용 사용해보세요.
                   </p>
-                  <a href=""> Read More </a>
+                  <!-- 페이지 넘기기 -->
+                  <!-- <a href="">  -->
+
+                  <!-- 모달창 띄우기 -->
+                  <a
+                    href=""
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#blogModal"
+                  >
+                    Read More
+                  </a>
                 </div>
               </div>
             </div>
@@ -102,15 +113,20 @@
         </div>
         <div class="blog_container">
           <div class="blog_bg">
-            <img src="images/gallery-bg.png" alt="" />
+            <img src="./assets/images/gallery-bg.png" alt="" />
           </div>
           <div class="container">
             <div class="blog_box">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="box b1">
+                  <div
+                    class="box b1"
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#blogModal"
+                  >
                     <div class="img-box">
-                      <img src="images/blog1.jpg" alt="" />
+                      <img src="./assets/images/blog1.jpg" alt="" />
                     </div>
                     <div class="blog-detail">
                       <div class="blog_title">
@@ -120,28 +136,125 @@
                           <h6>16-01-2020</h6>
                         </div>
                       </div>
-                      <p>작품내용을 설명해주세요</p>
+                      <p>작품설명을 넣어주세요</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="box b2">
+                  <div
+                    class="box b2"
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#blogModal"
+                  >
                     <div class="img-box">
-                      INHUMAN-Z
-                      <img src="images/blog2.jpg" alt="" />
+                      <img src="./assets/images/blog2.jpg" alt="" />
                     </div>
                     <div class="blog-detail">
                       <div class="blog_title">
-                        <h5></h5>
+                        <h5>INHAMUN-Z</h5>
                         <div class="blog_post">
-                          <h6>Post By: INHUMAN-Z</h6>
+                          <h6>Post By: INHAMAUN-Z</h6>
                           <h6>16-01-2020</h6>
                         </div>
                       </div>
-                      <p>작품내용을 설명해주세요</p>
+                      <p>작품설명을 넣어주세요</p>
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="blogModal"
+          tabindex="-1"
+          aria-labelledby="blogyModalLabel"
+          aria-hidden="true"
+          data-backdrop="static"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">최근 작품</h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div
+                  id="blogCarouselControls"
+                  class="carousel slide"
+                  data-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img
+                        src="./assets/images/blog1.jpg"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="./assets/images/blog2.jpg"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="./assets/images/gallery-3.jpg"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-target="#blogCarouselControls"
+                    data-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="sr-only">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-target="#blogCarouselControls"
+                    data-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="sr-only">Next</span>
+                  </button>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
               </div>
             </div>
           </div>
