--- a/gallery.html
+++ b/gallery.html
@@ -80,8 +80,7 @@
       <!-- end header section -->
     </div>
 
-    <!-- gallery section -->
-    <section class="gallery_section layout_padding">
+    <section class="gallery_section layout_padding-top">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 ml-auto">
@@ -91,48 +90,182 @@
                 영상실사형 버츄얼 휴먼과 게임캐릭터형 메타휴먼,에니메이션
                 판타지풍의 본인만의 3D캐릭터를 만들고 사용하실수있습니다.
               </p>
-              <a href=""> See More </a>
+
+              <!-- 화면 넘기기 -->
+              <!-- <a href=""> -->
+
+              <!-- 모달창 띄우기 -->
+              <a
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                See More
+              </a>
             </div>
           </div>
         </div>
       </div>
       <div class="gallery_container">
         <div class="gallery_bg">
-          <img src="images/gallery-bg.png" alt="" />
+          <img src="./assets/images/gallery-bg.png" alt="" />
         </div>
         <div class="container">
           <div class="gallery_box">
             <div class="box b1">
-              <div class="img-box">
-                <img src="images/gallery-1.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-1.jpg" alt="" />
+                <h5>INHANMUN-Z</h5>
               </div>
             </div>
             <div class="box b2">
-              <div class="img-box">
-                <img src="images/gallery-2.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-2.jpg" alt="" />
+                <h5>INHAMUN-Z</h5>
               </div>
-              <div class="img-box">
-                <img src="images/gallery-3.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-3.jpg" alt="" />
+                <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b3">
-              <div class="img-box">
-                <img src="images/gallery-4.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-4.jpg" alt="" />
+                <h5>INHAMUN-Z</h5>
               </div>
-              <div class="img-box">
-                <img src="images/gallery-5.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-5.jpg" alt="" />
+                <h5>INHAMUN-Z</h5>
               </div>
             </div>
             <div class="box b4">
-              <div class="img-box">
-                <img src="images/gallery-6.jpg" alt="" />
-                <h5>INHUMAN-Z</h5>
+              <div
+                class="img-box"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#galleryModal"
+              >
+                <img src="./assets/images/gallery-6.jpg" alt="" />
+                <h5>INHAMUN-Z</h5>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="galleryModal"
+        tabindex="-1"
+        aria-labelledby="galleryModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Our Gallery</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div
+                id="galleryCarouselControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./assets/images/gallery-1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-target="#galleryCarouselControls"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-target="#galleryCarouselControls"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
             </div>
           </div>
         </div>
