--- a/testimonial.html
+++ b/testimonial.html
@@ -91,7 +91,7 @@
               <p>
                 기업과 크리에이터만의 이익이 아닌 실행미션에 따른 이익을
                 추구하여 유저의 보상을 이루어낼수있으며 기업의 경우 실제유저들의
-                데이터베이스를 이용한 크리에터들과의 매칭서비스를 활용
+                데이터베이스를 이용한 크리에터들과의 매칭서비스를 이용하여
                 메타휴먼을 이용한 비용절감과 시간적소비가없는 마켓팅을 실현할수
                 있습니다.
               </p>
@@ -101,7 +101,7 @@
       </div>
       <div class="client_container">
         <div class="client_bg">
-          <img src="images/gallery-bg.png" alt="" />
+          <img src="./assets/images/gallery-bg.png" alt="" />
         </div>
         <div class="container">
           <div class="client_box">
@@ -114,39 +114,51 @@
                     data-ride="carousel"
                   >
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div
+                        class="carousel-item active clientModalBox"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
-                            <p>작품내용을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <p>작품설명을 넣어주세요</p>
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div
+                        class="carousel-item clientModalBox"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
-                            <p>작품내용을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <p>작품설명을 넣어주세요</p>
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <div
+                        class="carousel-item clientModalBox"
+                        data-toggle="modal"
+                        data-target="#clientModal"
+                      >
                         <div class="client_content-box layout_padding">
                           <div class="img-box">
-                            <img src="images/client.png" alt="" />
+                            <img src="./assets/images/client.png" alt="" />
                           </div>
                           <div class="detail-box">
                             <h4>Plio Dorak</h4>
-                            <p>작품내용을 넣어주세요</p>
-                            <img src="images/quote.png" alt="" />
+                            <p>작품설명을 넣어주세요</p>
+                            <img src="./assets/images/quote.png" alt="" />
                           </div>
                         </div>
                       </div>
@@ -173,10 +185,105 @@
               <div class="col-lg-6">
                 <div class="box b2">
                   <div class="camera_img-box">
-                    <img src="images/camera.png" alt="" />
+                    <img src="./assets/images/camera.png" alt="" />
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="clientModal"
+        tabindex="-1"
+        aria-labelledby="clientModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="clientModalLabel">
+                유저와 기업의 이익
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div
+                id="clientCarouselControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./assets/images/blog1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/blog2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./assets/images/gallery-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-target="#clientCarouselControls"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-target="#clientCarouselControls"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
             </div>
           </div>
         </div>
