--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
             <div class="img-box">
               <!-- ------------------------------------- -->
               <!-- 상단 메인 gif / img 넣는 부분 -->
-              <!-- <img src="gif/angry-2498.gif" alt="상단 메인 이미지" /> -->
+              <img src="./assets/gif/fox-826_256.gif" alt="상단 메인 이미지" />
               <!-- 1189.98 -->
-              <img
+              <!-- <img
                 src="./assets/images/slider-img.png"
                 alt="상단 메인 이미지"
-              />
+              /> -->
               <!-- 915.33 -->
               <!-- ------------------------------------- -->
             </div>
