--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <span> inhaman-z </span>
               </a>
               <div class="user_option">
-                <a href="#"> login </a>
-                <form class="form-inline">
-                  <button class="btn nav_search-btn" type="submit"></button>
-                </form>
+                <!-- <a href="#"> login </a> -->
+                <!-- <form class="form-inline"> -->
+                <!-- <button class="btn nav_search-btn" type="submit"></button> -->
+                <!-- </form> -->
               </div>
             </div>
           </nav>
@@ -110,9 +110,9 @@
                       후기 작성 등이 있을 수 있습니다. 이를 통해 크리에이터와
                       구독자는 함께 성장하고 이익을 공유할 수 있습니다.
                     </p>
-                    <div>
+                    <!-- <div>
                       <a href="#"> Request A Quote </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -127,9 +127,9 @@
                       구성됩니다. 구독자는 원하는 미션을 선택하여 수행할 수
                       있으며, 성공적으로 완료하면 보상을 받을 수 있습니다.
                     </p>
-                    <div>
+                    <!-- <div>
                       <a href="#"> Request A Quote </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -176,13 +176,36 @@
             <div class="img-box">
               <!-- ------------------------------------- -->
               <!-- 상단 메인 gif / img 넣는 부분 -->
-              <img src="./assets/gif/fox-826_256.gif" alt="상단 메인 이미지" />
-              <!-- 1189.98 -->
+              <!-- <img src="./assets/gif/fox-826_256.gif" alt="상단 메인 이미지" /> -->
               <!-- <img
                 src="./assets/images/slider-img.png"
                 alt="상단 메인 이미지"
               /> -->
-              <!-- 915.33 -->
+              <video
+                id="main-player"
+                class="video-js about-img"
+                controls
+                preload="auto"
+                data-setup="{}"
+                autoplay
+              >
+                <source
+                  src="./assets/video/아인슈타인 메인동영상.mp4"
+                  type="video/mp4"
+                />
+                <p class="vjs-no-js">
+                  <!-- 동영상 확장자 맞지 않을때(영상이 나오지 않을 경우) 표시되는 문구 -->
+                  To view this video please enable JavaScript, and consider
+                  upgrading to a web browser that
+                  <a
+                    href="https://videojs.com/html5-video-support/"
+                    target="_blank"
+                  >
+                    supports HTML5 video
+                  </a>
+                </p>
+              </video>
+
               <!-- ------------------------------------- -->
             </div>
           </div>
@@ -207,7 +230,13 @@
                   컨텐츠에 대한 수익을 창출할 수 있고, 광고주는 목표 그룹에게
                   정확하게 광고를 전달할 수 있습니다.
                 </p>
-                <a href="./about.html"> Read More </a>
+                <a
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#aboutModal"
+                >
+                  Read More
+                </a>
               </div>
             </div>
           </div>
@@ -230,7 +259,7 @@
           preload="auto"
           data-setup="{}"
         >
-          <source src="./assets/video/sample.mp4" type="video/mp4" />
+          <source src="./assets/video/background.mp4" type="video/mp4" />
           <!-- <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
           <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
           <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source> -->
@@ -245,6 +274,54 @@
         </video>
 
         <!-- ------------------------------------- -->
+      </div>
+
+      <!-- 모달 -->
+      <div
+        class="modal fade"
+        id="aboutModal"
+        tabindex="-1"
+        aria-labelledby="aboutModalLabel"
+        aria-hidden="true"
+        data-backdrop="static"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="aboutModalLabel">광고 매칭</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>
+                우리 플랫폼은 크리에이터의 컨텐츠와 광고주의 요구를
+                매칭시킵니다. 크리에이터는 자신의 컨텐츠와 관련된 광고를 수신할
+                수 있으며, 광고주는 해당 크리에이터의 컨텐츠와 관련된 광고를
+                게재할 수 있습니다. 이를 통해 크리에이터는 자체 컨텐츠에 대한
+                수익을 창출할 수 있고, 광고주는 목표 그룹에게 정확하게 광고를
+                전달할 수 있습니다.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <!-- <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button> -->
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -930,8 +1007,9 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved. Design by
-          <a href="https://html.design/">Free Html Templates</a>
+          INHUMAN-Z
+          <!-- &copy; <span id="displayYear"></span> All Rights Reserved. Design by
+          <a href="https://html.design/">Free Html Templates</a> -->
         </p>
       </div>
     </footer>
