--- a/gallery.html
+++ b/gallery.html
@@ -67,12 +67,12 @@
               <a class="navbar-brand" href="index.html">
                 <span> INHUMAN-Z </span>
               </a>
-              <div class="user_option">
+              <!-- <div class="user_option">
                 <a href="#"> login </a>
                 <form class="form-inline">
                   <button class="btn nav_search-btn" type="submit"></button>
                 </form>
-              </div>
+              </div> -->
             </div>
           </nav>
         </div>
