--- a/testimonial.html
+++ b/testimonial.html
@@ -76,12 +76,12 @@
               <a class="navbar-brand" href="index.html">
                 <span> INHUMAN-Z </span>
               </a>
-              <div class="user_option">
+              <!-- <div class="user_option">
                 <a href="#"> login </a>
                 <form class="form-inline">
                   <button class="btn nav_search-btn" type="submit"></button>
                 </form>
-              </div>
+              </div> -->
             </div>
           </nav>
         </div>
@@ -389,24 +389,6 @@
 
     <!-- end info section -->
 
-    <section class="contact">
-      <form>
-        <input type="text" placeholder="이름" id="email_name" required /> <br />
-        <input type="email" placeholder="이메일" id="email_email" required />
-        <br />
-        <input
-          type="text"
-          placeholder="연락처(숫자만 입력해주세요)"
-          id="email_phone"
-          required
-        />
-        <br />
-        <textarea placeholder="Message" id="email_message" required></textarea>
-        <br />
-        <button onclick="sendMail()">send</button>
-      </form>
-    </section>
-
     <!-- footer section -->
     <footer class="footer_section">
       <div class="container">
@@ -447,12 +429,9 @@
     <script type="text/javascript">
       (function () {
         emailjs.init("AJ6IbrZLDe9eGOlcL");
-        // alert("init이 되냐고오오옹");
       })();
 
       function sendMail() {
-        alert("ddhsl");
-
         var templateParams = {
           name: $("#email_name").val(),
           email: $("#email_email").val(),
@@ -460,7 +439,7 @@
           message: $("#email_message").val(),
         };
 
-        alert(templateParams.name);
+        // alert(templateParams.name);
 
         emailjs
           .send("service_rwd6imp", "template_5nnlhui", {
@@ -477,21 +456,6 @@
               alert(err);
             }
           );
-
-        // emailjs
-        //   .send("service_rwd6imp", "template_5nnlhui", templateParams)
-        //   .then(
-        //     function (response) {
-        //       alert(response);
-        //       alert("오니오니오니111");
-        //       console.log("SUCCESS!", response.status, response.text);
-        //     },
-        //     function (error) {
-        //       alert(error);
-        //       alert("오니오니오니111");
-        //       console.log("FAILED...", error);
-        //     }
-        //   );
       }
     </script>
   </body>
