--- a/index.html
+++ b/index.html
@@ -923,6 +923,7 @@
           <div class="heading_container">
             <h2>Contact Us</h2>
           </div>
+
           <div class="info_main">
             <div class="row">
               <div class="col-md-4 col-lg-3">
@@ -952,6 +953,23 @@
                     </div>
                   </a>
                 </div>
+                <div class="social_box">
+                  <a href="#">
+                    <img src="./assets/images/facebook.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="./assets/images/twitter.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="./assets/images/linkedin.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="./assets/images/instagram.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img src="./assets/images/youtube.png" alt="" />
+                  </a>
+                </div>
               </div>
               <div class="col-md-2 col-lg-3">
                 <div class="info_link-box">
@@ -976,23 +994,64 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="social_box">
-                  <a href="#">
-                    <img src="./assets/images/facebook.png" alt="" />
-                  </a>
-                  <a href="#">
-                    <img src="./assets/images/twitter.png" alt="" />
-                  </a>
-                  <a href="#">
-                    <img src="./assets/images/linkedin.png" alt="" />
-                  </a>
-                  <a href="#">
-                    <img src="./assets/images/instagram.png" alt="" />
-                  </a>
-                  <a href="#">
-                    <img src="./assets/images/youtube.png" alt="" />
-                  </a>
+              <div class="col-md-6" style="margin: 0; padding: 0">
+                <div class="contact">
+                  <div class="form-main">
+                    <div class="main-wrapper">
+                      <h2 class="form-head">Contact</h2>
+                      <form class="form-wrapper">
+                        <div class="form-card">
+                          <input
+                            class="form-input"
+                            type="text"
+                            name="name"
+                            id="email_name"
+                            required="required"
+                          />
+                          <label class="form-label" for="">Name</label>
+                        </div>
+
+                        <div class="form-card">
+                          <input
+                            class="form-input"
+                            type="email"
+                            name="email"
+                            id="email_email"
+                            required="required"
+                          />
+                          <label class="form-label" for="">Email</label>
+                        </div>
+
+                        <div class="form-card">
+                          <input
+                            class="form-input"
+                            type="text"
+                            name="phone_number"
+                            id="email_phone"
+                            required="required"
+                          />
+                          <label class="form-label" for="">Phone number</label>
+                        </div>
+
+                        <div class="form-card">
+                          <textarea
+                            class="form-textarea"
+                            maxlength="420"
+                            rows="3"
+                            name="message"
+                            id="email_message"
+                            required="required"
+                          ></textarea>
+                          <label class="form-textarea-label" for=""
+                            >Message</label
+                          >
+                        </div>
+                        <div class="btn-wrap">
+                          <button onclick="sendMail()">Submit</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
