main vedio mute

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                 preload="auto"
                 data-setup="{}"
                 autoplay
+                mute
               >
                 <source
                   src="./assets/video/아인슈타인 메인동영상.mp4"
