--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 preload="auto"
                 data-setup="{}"
                 autoplay
-                mute
+                muted
               >
                 <source
                   src="./assets/video/아인슈타인 메인동영상.mp4"
