--- a/index.html
+++ b/index.html
@@ -185,10 +185,9 @@
                 id="main-player"
                 class="video-js about-img"
                 controls
+                autoplay
                 preload="auto"
                 data-setup="{}"
-                autoplay
-                muted
               >
                 <source
                   src="./assets/video/아인슈타인 메인동영상.mp4"
@@ -921,14 +920,14 @@
     <section class="info_section">
       <div class="info_container layout_padding-top">
         <div class="container">
-          <div class="heading_container">
-            <h2>Contact Us</h2>
-          </div>
-
           <div class="info_main">
+            <!-- <div class="heading_container"> -->
+
+            <!-- </div> -->
             <div class="row">
               <div class="col-md-4 col-lg-3">
                 <div class="info_contact">
+                  <h2>Contact Us</h2>
                   <a href="#" class="link-box">
                     <div class="img-box">
                       <img src="./assets/images/location.png" alt="" />
@@ -974,6 +973,7 @@
               </div>
               <div class="col-md-2 col-lg-3">
                 <div class="info_link-box">
+                  <h2 style="visibility: hidden">.</h2>
                   <ul>
                     <li class=" ">
                       <a class="" href="index.html"
